--- a/Config/conf.yaml
+++ b/Config/conf.yaml
@@ -1,9 +1,11 @@
-ante: 0
+ante: 5
 blind_structure: null
-initial_stack: 100
-max_round: 10
+initial_stack: 1000
+max_round: 100
 small_blind: 10
 ai_players:
 - name: honest_AI
   path: /app/players/honest_player.py
 
+- name: PokerShark
+  path: /app/players/remote_player.py
