--- a/Pokershark/conf.yaml
+++ b/Pokershark/conf.yaml
@@ -5,7 +5,13 @@ max_round: 100
 small_blind: 10
 ai_players:
 - name: honest_AI
-  path: /src/config/players/honest_player.py
+  path: /src/Pokershark/players/honest_player.py
 
 - name: PokerShark
-  path: /src/config/players/remote_player.py
+  path: /src/Pokershark/players/remote_player.py
+
+- name: Random
+  path: /src/Pokershark/players/random_player.py
+
+- name: bold
+  path: /src/Pokershark/players/bold_player.py
