--- a/Config/conf.yaml
+++ b/Config/conf.yaml
@@ -1,17 +1,48 @@
 ante: 0
 blind_structure: null
 initial_stack: 1000
-max_round: 100
+max_round: 15
 small_blind: 10
 ai_players:
-#- name: honest_AI
+#- name: HonestMan
 #  path: /src/config/players/honest_player.py
+
+#- name: EmulatorPlayer
+#  path: /src/config/players/emulator_player.py
+
 
 - name: PokerShark
   path: /src/config/players/remote_player.py
 
+#- name: Fish
+#  path: /src/config/players/fish_player.py
+  
+#- name: FoldMan
+#  path: /src/config/players/fold_player.py
+
+#- name: Bold
+#  path: /src/config/players/bold_player.py
+  
 #- name: Random
 #  path: /src/config/players/random_player.py
 
+#- name: Fish2
+#  path: /src/config/players/fish_player.py
+    
 #- name: bold
 #  path: /src/config/players/bold_player.py
+  
+#- name: honest_AI2
+#  path: /src/config/players/honest_player.py
+  
+#- name: Random2
+#  path: /src/config/players/random_player.py
+  
+#- name: honest_AI3
+#  path: /src/config/players/honest_player.py
+ 
+#- name: honest_AI3
+#  path: /src/config/players/honest_player.py
+
+#- name: honest_AI3
+#  path: /src/config/players/honest_player.py
